--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,10 @@
 <%- include("partials/header.ejs") %>
 
+<% if (locals.image && locals.title && locals.text){ %>
+
+<% } else { %>
+
+<% } %> 
 
 
 
