--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,13 +1,23 @@
 <%- include("partials/header.ejs") %>
 
-  <h1>Home Page</h1>
+  <h1>New Blog</h1>
 
-  <p>Lorem ipsum dolor sit amet, et proin, justo mus. Porta suspendisse turpis netus sagittis tortor at, vitae aliquet
-    pharetra cras velit, id gravida, neque nulla lorem, posuere hac. Ultricies eget lacus vehicula, in ante aliquam
-    et,facilisis tempor duis orci. Sed molestie sem in duis eu id, nisl id ultricies metus blandit eget praesent, pede
-    tempornullam, vitae arcu tortor suspendisse nibh risus. Nulla id suscipit reiciendis nulla erat. Porta enim aute
-    luctus,ducimus sodales dolor.
-  </p>
+  <form class="mb-3" action="/submit" method="POST">
+    <div class="mb-3">
+      <label for="formFile" class="form-label">Upload Image</label>
+      <input name="image_upload" class="form-control" type="file" id="formFile" accept="image/png, image/jpeg">
+    </div>
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Blog Title</label>
+      <input name="title" type="email" class="form-control" id="exampleFormControlInput1" placeholder="Title">
+    </div>
+    <div class="mb-3">
+      <label for="exampleFormControlTextarea1" class="form-label">Blog Text</label>
+      <textarea name="text" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+
 
 
 <%- include("partials/footer.ejs") %>
