--- a/views/post.ejs
+++ b/views/post.ejs
@@ -9,15 +9,13 @@
     </div>
     <div class="mb-3">
       <label for="exampleFormControlInput1" class="form-label">Blog Title</label>
-      <input name="title" type="email" class="form-control" id="exampleFormControlInput1" placeholder="Title">
+      <input name="title" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Title">
     </div>
     <div class="mb-3">
       <label for="exampleFormControlTextarea1" class="form-label">Blog Text</label>
       <textarea name="text" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <input type="submit" value="SUBMIT" />
   </form>
-
-
 
 <%- include("partials/footer.ejs") %>
