--- a/public/styles/content.css
+++ b/public/styles/content.css
@@ -7,38 +7,10 @@
     height: 200px;
 }
 
-.overlay {
-    display: none;
-    position: fixed; 
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(128, 128, 128, 0.7); 
-    z-index: 1000; 
-}
-
-.form-popup {
-  display: none;
-  position: fixed;
-  top: 10%;
-  left: 50%;
-  height: 70%;
-  transform: translate(-50%, 0);
-  z-index: 1001;
-  width: 50%;
-  padding: 10px;
-  background-color: whitesmoke;
-  border: 3px solid #f1f1f1;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-}
-
-.mb-3 .form-container {
-  display: block;
-  max-width: 50%;
-  padding: 10px;
-}
-
 #blogText{
   height: 50%;
+}
+
+.card .mb-3{
+  display: none;
 }
