--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -13,7 +13,7 @@
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-itWem">
                 <a class="nav-link active" aria-current="page" href="/about">About</a>
             </li>
             <li class="nav-item">
