--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,52 +1,56 @@
 <%- include("partials/header.ejs") %>
 
-<div class="head-box">
-    <h1>Welcome to my Blog!</h1>
-    <h3>Some information about the blog goes here.</h3>
+<div class="welcomeArea">
+    <div class="head-box">
+        <h1>Welcome to my Blog!</h1>
+        <h3>Some information about the blog goes here.</h3>
+    </div>
+    <div class="button-box">
+        <a href="/thePost"><button id = "myButton">New Post</button></a>
+    </div>
 </div>
-<div class="button-box">
-    <a href="/thePost"><button id = "myButton">New Post</button></a>
-</div>
-<div id="displayArea">
-    <div class="row flex-row justify-content-evenly">
-        <div class="content col-12, col-xxl-8 col-xl-8 p-4">
-            <% if (posts.length===0) {%>
-                <div>
-                    <h3> No new posts...</h3>
-                </div>
-            <% } else { %>
+<div class="displayArea">
+    <div class="main">
+        <div class="all-posts">
+        <% if (posts.length===0) {%>
+            <div>
+                <h3> No new posts...</h3>
+            </div>
+        <% } else { %>
+            <ul>
+        <%      posts.toReversed().forEach((post) => {%>
+                    <li>
+                        <h3><a href="/view/<%=posts.indexOf(post)%>"><%=post.title%></a></h3>
+                        <p><%=post.time%></p>
+                        <p><%=post.text%></p>
+                        <hr>
+                    </li>
+        <%      }); %>
+            </ul>
+        <% } %>
+        </div>
+    </div>
+    <div class="secondary">
+        <div class="previous-posts">
+        <% if (posts.length===0) {%>
+            <div>
+                <p>No posts yet...</p>
+            </div>
+        <%} else {%>
+            <div>
+                <p>Recent Posts</p>
                 <ul>
             <%      posts.toReversed().forEach((post) => {%>
                         <li>
-                            <h3><a href="/view/<%=posts.indexOf(post)%>"><%=post.title%></a></h3>
-                            <p><%=post.time%></p>
-                            <p><%=post.text%></p>
+                            <h3><a href="/view/<%= posts.indexOf(post) %>"><%=post.title%></a></h3>
                             <hr>
                         </li>
             <%      }); %>
                 </ul>
-            <% } %>
+            </div>
+        <% } %>
         </div>
-        <div id="sidebar">
-            <% if (posts.length===0) {%>
-                <div>
-                    <p>No posts yet...</p>
-                </div>
-            <%} else {%>
-                <div>
-                    <p>Recent Posts</p>
-                    <ul class="p-0">
-                <%      posts.toReversed().forEach((post) => {%>
-                            <li>
-                                <h3><a href="/view/<%= posts.indexOf(post) %>"><%=post.title%></a></h3>
-                                <hr>
-                            </li>
-            <%          }); %>
-                    </ul>
-                </div>
-            <% } %>
-        </div>
-    </div>
+    </div>    
 </div>
 
 <%- include("partials/footer.ejs") %>
